fix: backface visibility on safari

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ html {
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
+  -webkit-perspective: 100rem;
   perspective: 100rem;
   background-image: linear-gradient(var(--color-dark), var(--color-light));
   -webkit-background-clip: text;
@@ -66,6 +67,7 @@ h2 {
   position: relative;
   width: 20rem;
   height: 20rem;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   transition: all 1s ease;
   z-index: 1;
@@ -102,6 +104,7 @@ h2 {
   background-image: linear-gradient(#7c828b, var(--color-light));
   border-radius: 100%;
   transform: rotateY(-180deg);
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   transition: all 1s ease;
   color: var(--color-light);
